# libmumd

./: .gitignore  LICENSE  README.md  convert.py  pyproject.toml
libmumd/: __init__.py  cli.py  convert.py
